--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
+    
+<link rel="icon" type="image/png" href="./icon.png">
+
+<head>
+    <title>Gamermusic4 - Mike Haltiner</title>
+    <center>
+
+    </center>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <p><font size=64>
+        This site is currently under development<br>
+        See you later :D
+    </font></p>
+    <p>I'm hosted with GitHub Pages.</p>
+    <p></p>
 </body>
+
 </html>
