--- a/index.html
+++ b/index.html
@@ -1,22 +1,64 @@
 <!DOCTYPE html>
 <html>
-    
+<meta http-equiv="refresh" content="5" ; URL=file:./index.html" />
 <link rel="icon" type="image/png" href="./icon.png">
 
 <head>
     <title>Gamermusic4 - Mike Haltiner</title>
-    <center>
+    <link rel="stylesheet" href="css/style.css" />
 
-    </center>
 </head>
 
-<body>
-    <p><font size=64>
-        This site is currently under development<br>
-        See you later :D
-    </font></p>
-    <p>I'm hosted with GitHub Pages.</p>
-    <p></p>
+<body class="homepage">
+    <div id="header">
+        <center>
+            <h2>
+                This site is currently under development<br>
+                See you later :D
+            </h2>
+        </center>
+    </div>
+    <div id="featured-wrapper">
+
+        <div class="container">
+
+            <div class="row">
+
+                <div class="4u">
+                    <header>
+                        <h3>Twitter</h3>
+                    </header>
+                    <div id="image"></span>
+                        <a href="https://twitter.com/Mike_GM4">
+                            <img src="images/Twitter.svg">
+                        </a>
+                    </div>
+                </div>
+
+                <section class="4u">
+                    <header>
+                        <h3>Twitter</h3>
+                    </header>
+                    <div id="image">
+                        <a href="https://twitter.com/Mike_GM4">
+                            <img src="images/Twitter.svg">
+                        </a>
+                    </div>
+                </section>
+
+                <section class="4u">
+                    <header>
+                        <h3>Twitter</h3>
+                    </header>
+                    <div id="image">
+                        <a href="https://twitter.com/Mike_GM4">
+                            <img src="images/Twitter.svg">
+                        </a>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
