It going further

--- a/index.html
+++ b/index.html
@@ -1,64 +1,62 @@
 <!DOCTYPE html>
 <html>
-<meta http-equiv="refresh" content="5" ; URL=file:./index.html" />
 <link rel="icon" type="image/png" href="./icon.png">
-
 <head>
     <title>Gamermusic4 - Mike Haltiner</title>
     <link rel="stylesheet" href="css/style.css" />
-
 </head>
-
-<body class="homepage">
-    <div id="header">
-        <center>
-            <h2>
-                This site is currently under development<br>
-                See you later :D
-            </h2>
-        </center>
+<body>
+    <div class="Banner">
+        <h1>Gamermusic4 - Mike Haltiner</h1>
     </div>
-    <div id="featured-wrapper">
 
-        <div class="container">
+    <div class="Navigation">
+        <nav>
+            <ul>
+                <li><a href="">About me</a></li>
+                <li><a href="">Skills</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
 
-            <div class="row">
-
-                <div class="4u">
-                    <header>
-                        <h3>Twitter</h3>
-                    </header>
-                    <div id="image"></span>
-                        <a href="https://twitter.com/Mike_GM4">
-                            <img src="images/Twitter.svg">
-                        </a>
-                    </div>
-                </div>
-
-                <section class="4u">
-                    <header>
-                        <h3>Twitter</h3>
-                    </header>
-                    <div id="image">
-                        <a href="https://twitter.com/Mike_GM4">
-                            <img src="images/Twitter.svg">
-                        </a>
-                    </div>
-                </section>
-
-                <section class="4u">
-                    <header>
-                        <h3>Twitter</h3>
-                    </header>
-                    <div id="image">
-                        <a href="https://twitter.com/Mike_GM4">
-                            <img src="images/Twitter.svg">
-                        </a>
-                    </div>
-                </section>
-            </div>
+    <div class="AboutMe">
+        <img src="images/Mike.jpeg" alt="Mike Haltiner">
+        <div class="AboutMeText">
+            Hey I'm Mike, nice to see you here
         </div>
     </div>
+
+<div class="SocialLinks">
+
+    <div class="Title">
+        <h2>Social Links</h2>
+    </div>
+
+    <div class="Links">
+
+        <div class="Link">
+            <a href="https://twitter.com/Mike_GM4" target="_blank">
+                <img id="link-image" src="images/Twitter.png" alt="Twitter">
+            </a>
+        </div>
+        
+        <div class="Link">
+            <a href="https://Twitch.com/Gamermusic4" target="_blank">
+                <img id="link-image" src="images/Twitch.png" alt="Twitch">
+            </a>
+        </div>
+        
+        <div class="Link">
+            <a href="https://youtube.com/Gamermusic4" target="_blank">
+                <img id="link-image" src="images/YouTube.png" alt="YouTube">
+            </a>
+        </div>
+
+    </div>
+
+</div>
+
 </body>
 
 </html>
