--- a/index.html
+++ b/index.html
@@ -1,62 +1,143 @@
 <!DOCTYPE html>
 <html>
+<!--<meta http-equiv="refresh" content="5" ; URL=file:./index.html>-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="./icon.png">
+<link rel="stylesheet" href="css/style.css" />
+
 <head>
-    <title>Gamermusic4 - Mike Haltiner</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <title>Mike Haltiner - Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div class="Banner">
-        <h1>Gamermusic4 - Mike Haltiner</h1>
-    </div>
-
-    <div class="Navigation">
-        <nav>
-            <ul>
-                <li><a href="">About me</a></li>
-                <li><a href="">Skills</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
-
-    <div class="AboutMe">
-        <img src="images/Mike.jpeg" alt="Mike Haltiner">
-        <div class="AboutMeText">
-            Hey I'm Mike, nice to see you here
+    <header>
+        <div class="Navigation">
+            <button class="nav-toggle">
+                <span class=""></span>
+            </button>
+            <nav class="nav">
+                <ul>
+                    <li class="nav__item"><a class="nav__link" href="#home">Home</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#about">About Me</a></li>
+                    <li class="nav__item"><a class="nav__link" href="#projects">Projects</a></li>
+                </ul>
+            </nav>
         </div>
-    </div>
+    </header>
+    <!-- Inhalt -->
+    <section class="intro" id="home">
+        <h1 class="section__title section__title--intro">Portfolio - Mike Haltiner</h1>
+    </section>
 
-<div class="SocialLinks">
+    <!-- About -->
+    <section class="about-me" id="about">
+        <h2 class="section__title section__title--about-me">About Me</h2>
+        <img class="about-me__img" src="images/Mike.jpeg" alt="Mike Haltiner">
+        <h3 class="section__content">Hey I'm Mike, nice to see you here!</h3>
+    </section>
 
-    <div class="Title">
-        <h2>Social Links</h2>
-    </div>
-
-    <div class="Links">
-
-        <div class="Link">
-            <a href="https://twitter.com/Mike_GM4" target="_blank">
-                <img id="link-image" src="images/Twitter.png" alt="Twitter">
-            </a>
+    <section class="my-projects" id="projects">
+        <h2 class="section__title">Projects</h2>
+        <p></p>
+        <div class="projects">
+            <div class="project">
+                <h3 class="project__title">Project 1</h3>
+                <a href="https://gamermusic4.itch.io/" target="_blank">
+                    <img class="project__img" src="./images/ProjectThumbnail.jpg" alt="" href>
+                </a>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="project">
+                <h3 class="project__title">Project 1</h3>
+                <a href="https://gamermusic4.itch.io/" target="_blank">
+                    <img class="project__img" src="./images/ProjectThumbnail.jpg" alt="" href>
+                </a>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="project">
+                <h3 class="project__title">Project 1</h3>
+                <a href="https://gamermusic4.itch.io/" target="_blank">
+                    <img class="project__img" src="./images/ProjectThumbnail.jpg" alt="" href>
+                </a>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="project">
+                <h3 class="project__title">Project 1</h3>
+                <a href="https://gamermusic4.itch.io/" target="_blank">
+                    <img class="project__img" src="./images/ProjectThumbnail.jpg" alt="" href>
+                </a>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="project">
+                <h3 class="project__title">Project 1</h3>
+                <a href="https://gamermusic4.itch.io/" target="_blank">
+                    <img class="project__img" src="./images/ProjectThumbnail.jpg" alt="" href>
+                </a>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            </div>
         </div>
-        
-        <div class="Link">
-            <a href="https://Twitch.com/Gamermusic4" target="_blank">
-                <img id="link-image" src="images/Twitch.png" alt="Twitch">
-            </a>
+    </section>
+
+    <footer>
+        <h2 class="section__title section__title--footer">Social Links</h2>
+        <div class="social-links">
+            <div class="social-link">
+                <a href="https://twitter.com/Mike_GM4" target="_blank">
+                    <img id="link-image" src="images/Twitter.png" alt="Twitter">
+                </a>
+            </div>
+            <div class="social-link">
+                <a href="https://Twitch.com/Gamermusic4" target="_blank">
+                    <img id="link-image" src="images/Twitch.png" alt="Twitch">
+                </a>
+            </div>
+
+            <div class="social-link">
+                <a href="https://youtube.com/Gamermusic4" target="_blank">
+                    <img id="link-image" src="images/YouTube.png" alt="YouTube">
+                </a>
+            </div>
+
+            <div class="social-link">
+                <a href="https://www.linkedin.com/in/mike-max-haltiner-251125201/" target="_blank">
+                    <img id="link-image" src="images/Linkedin.png" alt="LinkedIn">
+                </a>
+            </div>
+
+            <div class="social-link">
+                <a href="https://github.com/Gamermusic4" target="_blank">
+                    <img id="link-image" src="images/Github.png" alt="Github">
+                </a>
+            </div>
+
         </div>
-        
-        <div class="Link">
-            <a href="https://youtube.com/Gamermusic4" target="_blank">
-                <img id="link-image" src="images/YouTube.png" alt="YouTube">
-            </a>
-        </div>
-
-    </div>
-
-</div>
-
+    </footer>
 </body>
 
 </html>
