--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <!--<header>
         <div class="Navigation">
             <button class="nav-toggle">
                 <span class=""></span>
@@ -24,7 +24,7 @@
                 </ul>
             </nav>
         </div>
-    </header>
+    </header>-->
     <!-- Inhalt -->
     <section class="intro" id="home">
         <h1 class="section__title section__title--intro">Portfolio - Mike Haltiner</h1>
@@ -34,18 +34,20 @@
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about-me">About Me</h2>
         <img class="about-me__img" src="images/Mike.jpeg" alt="Mike Haltiner">
-        <h3 class="section__content">Hey I'm Mike, nice to see you here!</h3>
+        <h3 class="section__content">Hey I'm Mike, nice to see you here!<br>This site is currently under development!</h3>
     </section>
 
     <section class="my-projects" id="projects">
         <h2 class="section__title">Projects</h2>
         <p></p>
         <div class="projects">
+
             <div class="project">
-                <h3 class="project__title">Project 1</h3>
-                <a href="https://gamermusic4.itch.io/" target="_blank">
-                    <img class="project__img" src="./images/ProjectThumbnail.jpg" alt="" href>
-                </a>
+                <h3 class="project__title">Orbers</h3>
+                <!--<img class="project__img" src="./images/ProjectThumbnail.jpg" alt="" href>-->
+                <iframe frameborder="0" src="https://itch.io/embed/595604?dark=true">
+                    <a href="https://gamermusic4.itch.io/orbrs">orb'rs by Gamermusic4</a>
+                </iframe>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                     labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
                     et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
@@ -53,11 +55,12 @@
                     labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
                     et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
             </div>
+
             <div class="project">
-                <h3 class="project__title">Project 1</h3>
-                <a href="https://gamermusic4.itch.io/" target="_blank">
-                    <img class="project__img" src="./images/ProjectThumbnail.jpg" alt="" href>
-                </a>
+                <h3 class="project__title">nalPoN</h3>
+                <iframe frameborder="0" src="https://itch.io/embed/724307?dark=true">
+                    <a href="https://gamermusic4.itch.io/nalpon">nalPoN by Gamermusic4</a>
+                </iframe>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                     labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
                     et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
@@ -65,34 +68,11 @@
                     labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
                     et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
             </div>
+
             <div class="project">
-                <h3 class="project__title">Project 1</h3>
-                <a href="https://gamermusic4.itch.io/" target="_blank">
-                    <img class="project__img" src="./images/ProjectThumbnail.jpg" alt="" href>
-                </a>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-            </div>
-            <div class="project">
-                <h3 class="project__title">Project 1</h3>
-                <a href="https://gamermusic4.itch.io/" target="_blank">
-                    <img class="project__img" src="./images/ProjectThumbnail.jpg" alt="" href>
-                </a>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-            </div>
-            <div class="project">
-                <h3 class="project__title">Project 1</h3>
-                <a href="https://gamermusic4.itch.io/" target="_blank">
-                    <img class="project__img" src="./images/ProjectThumbnail.jpg" alt="" href>
+                <h3 class="project__title">SuperSwipe</h3>
+                <a href="https://www.superswipe.games/" target="_blank">
+                    <img class="project__img" src="./images/superswipe.jfif" alt="" href>
                 </a>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                     labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
