--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about-me">About Me</h2>
         <img class="about-me__img" src="images/Mike.jpeg" alt="Mike Haltiner">
-        <h3 class="section__content">Hey I'm Mike, nice to see you here!<br>This site is currently under development!</h3>
+        <h3 class="section__content">Hey I'm Mike, nice to see you here!<br>This site is currently under development!
+        </h3>
     </section>
 
     <section class="my-projects" id="projects">
@@ -43,17 +44,13 @@
         <div class="projects">
 
             <div class="project">
-                <h3 class="project__title">Orbers</h3>
-                <!--<img class="project__img" src="./images/ProjectThumbnail.jpg" alt="" href>-->
-                <iframe frameborder="0" src="https://itch.io/embed/595604?dark=true">
-                    <a href="https://gamermusic4.itch.io/orbrs">orb'rs by Gamermusic4</a>
-                </iframe>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                <h3 class="project__title">SuperSwipe</h3>
+                <a href="https://www.superswipe.games/" target="_blank">
+                    <img class="project__img" src="./images/superswipe.jfif" alt="" href>
+                </a>
+                <p>SuperSwipe - We are a small team of game developer based in switzerland.<br>
+                    Our first game called „SumoVolley“ is currently in development, stay tuned for upcomming dev-blogs.
+                </p>
             </div>
 
             <div class="project">
@@ -61,26 +58,21 @@
                 <iframe frameborder="0" src="https://itch.io/embed/724307?dark=true">
                     <a href="https://gamermusic4.itch.io/nalpon">nalPoN by Gamermusic4</a>
                 </iframe>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                <p>The project for Brackeys Rewind Jam2020.2.<br>
+                    Together with a good friend of mine I created a prototype of a FPS game with rewind function.<br>
+                    At a later point in my study, I updated the project with local network functionality.<br>
+                    (Update is yet not published)</p>
             </div>
 
             <div class="project">
-                <h3 class="project__title">SuperSwipe</h3>
-                <a href="https://www.superswipe.games/" target="_blank">
-                    <img class="project__img" src="./images/superswipe.jfif" alt="" href>
-                </a>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-                    et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                <h3 class="project__title">Orbers</h3>
+                <!--<img class="project__img" src="./images/ProjectThumbnail.jpg" alt="" href>-->
+                <iframe frameborder="0" src="https://itch.io/embed/595604?dark=true">
+                    <a href="https://gamermusic4.itch.io/orbrs">orb'rs by Gamermusic4</a>
+                </iframe>
+                <p>First ever game jam project of mine. You'll find more information of the jam on the itch.io page.</p>
             </div>
+
         </div>
     </section>
 
