--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" href="./icon.png">
+<link rel="icon" type="image/png" href="./images/icon.png">
 <link rel="stylesheet" href="css/style.css" />
 <head>
     <title>Mike Haltiner - Portfolio</title>
