deploy new game

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="./images/icon.png">
 <link rel="stylesheet" href="css/style.css" />
+
 <head>
     <title>Mike Haltiner - Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div class="Navigation">
@@ -45,6 +47,15 @@
                 </a>
                 <p>SuperSwipe - We are a small team of game developer based in switzerland.<br>
                     Our first game called „SumoVolley“ is currently in development, stay tuned for upcomming dev-blogs.
+                </p>
+            </div>
+            <div class="project">
+                <h3 class="project__title">Self Driving Car (Nerual Network)</h3>
+                <iframe frameborder="0" src="https://itch.io/embed/1255570?dark=true">
+                    <a href="https://gamermusic4.itch.io/self-driving-car">Self Driving Car (Neural Network) by Gamermusic4</a>
+                </iframe>
+                <p>Artificial Intelligence<br>
+                    AT SAE one module is dedicated to AI. We looked at classic AI and self learning / neural networks.
                 </p>
             </div>
             <div class="project">
@@ -100,4 +111,5 @@
     </footer>
     <script src="js/index.js"></script>
 </body>
+
 </html>
