--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="project">
                 <h3 class="project__title">Self Driving Car (Nerual Network)</h3>
                 <iframe frameborder="0" src="https://itch.io/embed/1255570?dark=true">
-                    <a href="https://gamermusic4.itch.io/self-driving-car">Self Driving Car (Neural Network) by Gamermusic4</a>
+                    <a href="https://.itch.io/self-driving-car">Neural Network by Gamermusic4</a>
                 </iframe>
                 <p>Artificial Intelligence<br>
                     AT SAE one module is dedicated to AI. We looked at classic AI and self learning / neural networks.
@@ -61,7 +61,7 @@
             <div class="project">
                 <h3 class="project__title">nalPoN</h3>
                 <iframe frameborder="0" src="https://itch.io/embed/724307?dark=true">
-                    <a href="https://gamermusic4.itch.io/nalpon">nalPoN by Gamermusic4</a>
+                    <a href="https://.itch.io/nalpon">nalPoN by Gamermusic4</a>
                 </iframe>
                 <p>The project for Brackeys Rewind Jam2020.2.<br>
                     Together with a good friend of mine I created a prototype of a FPS game with rewind function.<br>
@@ -70,9 +70,8 @@
             </div>
             <div class="project">
                 <h3 class="project__title">Orbers</h3>
-                <!--<img class="project__img" src="./images/ProjectThumbnail.jpg" alt="" href>-->
                 <iframe frameborder="0" src="https://itch.io/embed/595604?dark=true">
-                    <a href="https://gamermusic4.itch.io/orbrs">orb'rs by Gamermusic4</a>
+                    <a href="https://.itch.io/orbrs">orb'rs by Gamermusic4</a>
                 </iframe>
                 <p>First ever game jam project of mine. You'll find more information of the jam on the itch.io page.</p>
             </div>
