--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
                 </iframe>
                 <p>The project for Brackeys Rewind Jam2020.2.<br>
                     Together with a good friend of mine I created a prototype of a FPS game with rewind function.<br>
-                    At a later point in my study, I updated the project with local network functionality.<br>
-                    (Update is yet not published)</p>
+                    At a later point in my study, I updated the project with local network functionality.</p>
             </div>
             <div class="project">
                 <h3 class="project__title">Orbers</h3>
