--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <a href="https://.itch.io/self-driving-car">Neural Network by Gamermusic4</a>
                 </iframe>
                 <p>Artificial Intelligence<br>
-                    AT SAE one module is dedicated to AI. We looked at classic AI and self learning / neural networks.
+                    At SAE one module is dedicated to AI. We looked at classic AI and self learning / neural networks.
                 </p>
             </div>
             <div class="project">
